2003-05-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_{ini,pref}.c, interface/w32g_utl.[ch]:
	  Add temperament type mute selector in preference. (W32GUI version)

2003-05-02  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix around initialization.
	* timidity/mix.c, timidity/playmidi.[ch]:
	  Fix about modulation envelope.
	  Fix about velocity to filter cutoff frequency.
	  
2003-05-01  Saito <timidity@flashmail.com>

	* timidity/sndfont.c, timidity/instrum.c,
	  timidity/mod2midi.c, timidity/smplfile.c:
	  Fix around initialization.
	* timidity/mix.c:
	  Bug fix in envelope generator.

2003-04-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, interface/w32g_subwin3.c,
	  timidity/controls.h, timidity/playmidi.c:
	  Support for CTLE_MUTE.

2003-04-30  Saito <timidity@flashmail.com>

	* timidity/mix.c:
	  Bug fix in envelope generator.
	  
2003-04-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/timidity.c:
	  Support for channel mute by temperament type.
	  Fix behaviour of quiet channel option -Q0.
	  Fix around temperament control SysEx.

2003-04-29  Saito <timidity@flashmail.com>

	* timidity/instrum.c:
	  Fix behaviour of user drumset / instrument.
	* timidity/tables.c, timidity/mix.c:
	  Modify envelope generator.
	* timidity/playmidi.c:
	  Disable Rx. Note Off for the moment.
	* timidity/sndfont.c:
	  Fix about initialization.

2003-04-29  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/playmidi.c, timidity/mod2midi.c:
	  Fix around MOD.

2003-04-24  Saito <timidity@flashmail.com>

	* timidity/reverb.c, timidity/playmidi.c, timidity/readmidi.c:
	  Fix around new reverb.
	* timidity/tables.c:
	  Randomize triangular waveform for SoundFont's LFO.
	* timidity/instrum.h:
	  Add some parameters to Sample struct.

2003-04-23  Saito <timidity@flashmail.com>

	* timidity/sndfont.c, timidity/playmidi.c, timidity/instrum.c:
	  Fix about cfgforsf.

2003-04-22  Saito <timidity@flashmail.com>
